# scf-next

./: .gitignore  Cargo.toml  README.md  WIKI.md  build.rs  justfile  tauri.conf.json
.github/workflows/: build.yml
capabilities/: default.json
controllers/8Bitdo/SN30-Pro+/Black/: controller.toml
controllers/GameSir/Tarantula Pro/: controller.toml
controllers/Gulikit/NS09/Black/: controller.toml
controllers/Keyboard & Mouse/Generic/: controller.toml
controllers/Keyboard & Mouse/Generic Gaming/: controller.toml
controllers/Microsoft/XBox 360/Black/: controller.toml
controllers/Microsoft/XBox One/Black/: controller.toml
controllers/Nintendo/Joycon Left/Blue/: controller.toml
controllers/Nintendo/Joycon Pair/Blue and Red/: controller.toml
controllers/Nintendo/Joycon Right/Red/: controller.toml
controllers/Nintendo/Pro Controller/Black/: controller.toml
controllers/Retro-Bit/SEGA Genesis/Black/: controller.toml
controllers/Sony/PS5/Black/: index.html
controllers/Tomee/SNES/: index.html
controllers/Tomee/SNES/scripts/: renderer.js
controllers/Valve/Steam Controllver v2/Black/: controller.toml
controllers/iNNEXT/N64/Black/: controller.toml
desktop/: com.scf-next.app.desktop
icons/: icon.icns
res/: com.scf-next.app.metainfo.xml
src/: main.rs  sdl_bindings.rs  state.rs  watcher.rs
src/cmd/: mod.rs
src/controller/: image.rs  mod.rs  scan.rs  toml.rs  types.rs
src/gamepad/: detect.rs  mod.rs  state.rs  util.rs
src/input/: linux.rs  mod.rs  windows.rs
tauri/: index.html  main.js  renderer.js  styles.css
(+2 files in other folders)
