[package]
name = "scf-next"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "scf-next"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
toml_edit = "0.22"
image = { version = "0.25", default-features = false, features = ["png", "webp"] }
base64 = "0.22"
notify = "7"
[target.'cfg(target_os = "linux")'.dependencies]
evdev = "0.13"

[target.'cfg(target_os = "windows")'.dependencies]
rdev = "0.5"

[target.'cfg(target_os = "macos")'.dependencies]
rdev = "0.5"

[build-dependencies]
tauri-build = { version = "2", features = [] }
cmake = "0.1"
